Bug 95700 - Index dialog cut off
Summary: Index dialog cut off
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.6.3 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.0.1 target:5.0.5
Keywords: bibisected, bisected, regression
: 90015 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-09 12:43 UTC by Oliver Specht (CIB)
Modified: 2016-10-25 19:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Index dialog (34.15 KB, image/jpeg)
2015-11-09 12:43 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2015-11-09 12:43:17 UTC
Created attachment 120410 [details]
Index dialog

- call the Insert Index or Table of Contents dialog and switch off the preview
- close the dialog and open it again
- switch Type to Alphabetical Index
->the last line of controls is only partly visible, see attached screen shot
Comment 1 raal 2015-11-09 13:14:33 UTC
regression, works OK in Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)

I can confirm with Version: 5.1.0.0.alpha1+
Build ID: 8bde421ccec9c10fe1382ad68485852889dd4c74
Comment 2 raal 2015-11-16 13:45:43 UTC
This seems to have begun at the below commit.
Adding Cc: to caolanm@redhat.com ; Could you possibly take a look at this one?
Thanks
 a31d1d7063014503500cb5de6f36f3486a64da60 is the first bad commit
commit a31d1d7063014503500cb5de6f36f3486a64da60
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Sat Mar 14 22:30:44 2015 +0800

    source-hash-7dda48d56f2d10bd6220fba19168ee1a70ecc05f
    
    (Bibisect: Skipped preceding irrelevant commit(s) 8f7f2dc7a8aa6639f41c51216a4b54c4bb885fd4)
    
    commit 7dda48d56f2d10bd6220fba19168ee1a70ecc05f
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Tue Jul 1 15:04:10 2014 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue Jul 1 16:43:05 2014 +0100
    
        Related: fdo#80633 cache optimal size
    
        Change-Id: Ic2c3aefebd3061d294f339c6d262a3c3e381fbe4

bibisect-44max$ git bisect log
# bad: [cf6ea17155fabb2a120ba07c150735591ac861d7] source-hash-3f94c9e9ddfd807b449f3bb9b232cf2041fa12d2
# good: [fc71ac001f16209654d15ef8c1c4018aa55769f5] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
git bisect start 'latest' 'oldest'
# bad: [8cf60cc706948588e2f33a6d98b7c55d454e362a] source-hash-f340f0454627939f1830826fb5cc53a90e6c62a4
git bisect bad 8cf60cc706948588e2f33a6d98b7c55d454e362a
# good: [d9885f526fc7a09cc8f9f8ee643af1b966be24bb] source-hash-d1465c64c6f64ad8dd25e40cdc69649b24b305ea
git bisect good d9885f526fc7a09cc8f9f8ee643af1b966be24bb
# bad: [c779cf7967f4d14c5e649a5c696b07279d550efd] source-hash-e9c5022580f14c0ca97503f8b3cc56b530fff174
git bisect bad c779cf7967f4d14c5e649a5c696b07279d550efd
# bad: [030e0477638f9d9110ad62f88fd4b881521e0541] source-hash-1a6e47e3fda10e6d220b67d766ec6fbdfd852b80
git bisect bad 030e0477638f9d9110ad62f88fd4b881521e0541
# bad: [e5b21da1e7dc9ff7754029c50b197590d67638a1] source-hash-579d9ae1c5873f78dbe0364c83842de8556f6ccb
git bisect bad e5b21da1e7dc9ff7754029c50b197590d67638a1
# bad: [3aaaff0da6a48aee7a5e827ffc0fc467dd35aacf] source-hash-0ed069ff8dc941bf902edfefd5c62f1ece3f8ad8
git bisect bad 3aaaff0da6a48aee7a5e827ffc0fc467dd35aacf
# bad: [1c207b72b05a1725334a6da57518e44e3121d79e] source-hash-b807a02850e4b5cc25707e5af8eb36d76c76af61
git bisect bad 1c207b72b05a1725334a6da57518e44e3121d79e
# bad: [bb2988508caa0c52668ef6ee487c865944fb4bf0] source-hash-4776da791f69fa14104f054923be25618c297398
git bisect bad bb2988508caa0c52668ef6ee487c865944fb4bf0
# good: [dd70af829a4a695ca92bd2228876bfa11ae5211e] source-hash-e50ef195bc95f3f410119f623928382cb88b45d2
git bisect good dd70af829a4a695ca92bd2228876bfa11ae5211e
# bad: [cf18a6a00d25c4661a9af13c7efde5cfee8cd34d] source-hash-4d22b8f7b46c6e93f682ac26aee1403cd5288a88
git bisect bad cf18a6a00d25c4661a9af13c7efde5cfee8cd34d
# bad: [67a7e84abc636970a50f71d0f587e864f77d0be9] source-hash-b35f3dfb1afa78722a4cd8e69a625456a6dd01d6
git bisect bad 67a7e84abc636970a50f71d0f587e864f77d0be9
# good: [7c6b0e6235a628b3aa154911a24d140f0fdfc8dc] source-hash-b382f5df849b7ceb22aa0fba73287f040478dc13
git bisect good 7c6b0e6235a628b3aa154911a24d140f0fdfc8dc
# bad: [a31d1d7063014503500cb5de6f36f3486a64da60] source-hash-7dda48d56f2d10bd6220fba19168ee1a70ecc05f
git bisect bad a31d1d7063014503500cb5de6f36f3486a64da60
# first bad commit: [a31d1d7063014503500cb5de6f36f3486a64da60] source-hash-7dda48d56f2d10bd6220fba19168ee1a70ecc05f
Comment 3 Commit Notification 2015-12-03 11:39:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d40d756f4079a228035b5db346da50fe7aed0bd2

Resolves: tdf#95700 index dialog cut off

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2015-12-03 11:39:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3a4bfcb0b6191665e63440b99fbf57080bd5c56&h=libreoffice-5-1

Resolves: tdf#95700 index dialog cut off

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-12-16 20:33:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f307d1a01a4eeb3e4c9ee207aa0385c8c4586806&h=libreoffice-5-0

Resolves: tdf#95700 index dialog cut off

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 10:35:08 UTC Comment hidden (obsolete)
Comment 7 Adolfo Jayme Barrientos 2016-04-16 09:24:57 UTC
*** Bug 90015 has been marked as a duplicate of this bug. ***