Resolves: tdf#95700 index dialog cut off

queue_resize needs to invalidate the size cache even
if there is a pending layout idle awaiting

Change-Id: I6dba3d37fbb33125cc3f5d17aff6d2f7a3388654