vcl/source/window/syswin.cxx
@@ -1016,11 +1016,13 @@ const Link<SystemWindow&,void>& SystemWindow::GetCloseHdl() const
 
 void SystemWindow::queue_resize(StateChangedType /*eReason*/)
 {
-    if (hasPendingLayout() || isCalculatingInitialLayoutSize())
-        return;
     if (!isLayoutEnabled())
         return;
+    if (isCalculatingInitialLayoutSize())
+        return;
     InvalidateSizeCache();
+    if (hasPendingLayout())
+        return;
     maLayoutIdle.Start();
 }
 
